LLM now invoked to select appropriate API call from closest known high-level task. Blacklist introduced for non-user triggered API calls. Fixed a bug in GuidanceConnectionManager where the execution result active promise was incorrectly removed if recovery procedures were attempted.